--- a/zadanie_2_transfer_learning/NLP_L3_Transfer_learning.ipynb
+++ b/zadanie_2_transfer_learning/NLP_L3_Transfer_learning.ipynb
@@ -304,8 +304,7 @@
         "df3 = pd.read_csv(\"/content/twitter_racism_parsed_dataset.csv\")\n",
         "\n",
         "df = pd.concat([df1, df2, df3])\n",
-        "df.head()\n",
-        "df"
+        "df.head()"
       ]
     },
     {
